<resources>
    <string name="app_name">ifrs-pdm-avaliacao-tres</string>
    <string name="username">Nome de Usuário</string>
    <string name="password">Senha</string>
    <string name="login">Entrar</string>
    <string name="singup">Cadastrar-se</string>
    <string name="email">Email</string>
    <string name="name">Nome Completo</string>
    <string name="save">Cadastrar</string>
    <string name="back_to_login">Voltar para Login</string>
    <string name="genre_name">Nome do Fornecedor</string>
    <string name="genre_store">Adicionar Fornecedor</string>
    <string name="genre_update">Atualizar</string>
    <string name="genre_delete">Deletar</string>
    <string name="genre_list">Listagem de Gêneros</string>
    <string name="movie_delete">Deletar Filme</string>
    <string name="movie_update">Atualizar Filme</string>
    <string name="movie_title">Título do Filme</string>
    <string name="movie_description">Descrição do Filme</string>
    <string name="movie_year">Ano do Filme</string>
    <string name="movie_store">Cadastrar Filme</string>
    <string name="movie_list">Listagem de Filmes</string>
</resources>